--- a/HierarchicalCommunity/paper/problem.tex
+++ b/HierarchicalCommunity/paper/problem.tex
@@ -16,7 +16,7 @@ xxxx
 \end{definition}
 
 \begin{definition}[Induced rooted subtree]
-Given two P-trees $T$ and $S$ rooted at $r_t$ and $r_s$. $T$ is the induced rooted subtree of $S$ iff there exist a one-to-one mapping $\varphi$: $V_s \to V_t$ and $l$ denotes the label of tree node $x$, three constraints hold:
+Given two P-trees $T$ and $S$ rooted at $r_t$ and $r_s$. $T$ is the induced rooted subtree of $S$ iff~\footnote{if and only if.} there exist a one-to-one mapping $\varphi$: $V_s \to V_t$ and $l$ denotes the label of tree node $x$, three constraints hold:
 
 \vspace{1ex}
 
