Basic algorithm confirmed; Persucode of basic algorithm;

--- a/HierarchicalCommunity/paper/pcq.tex
+++ b/HierarchicalCommunity/paper/pcq.tex
@@ -32,7 +32,6 @@
 
 \title{Community Search for Large Profiled Graphs}
 \numberofauthors{1}
-\author{kevin}
 
 \maketitle
 \begin{abstract}
@@ -40,6 +39,8 @@ abstract
 \end{abstract}
 
 \input{problem}
+\input{basicAlgo}
+
 \input{hardness}
 
 \clearpage
